# fullstack-kubernetes

./: README.md
.github/workflows/: log-output.yml  pong-app.yml  todo-app.yml  todo-backend.yml  todo-broadcaster.yml
dummysite-resource/: Dockerfile  controller.py  pyproject.toml
dummysite-resource/manifests/: controller.yml  dummysite-crd.yml  example-site.yml  rbac.yml
greeter/manifests/: deployment.yml  httproute.yml  service.yml
log-output/: Dockerfile  Dockerfile.server  Dockerfile.writer  gunicorn.py  kustomization.yml  main.py  writer.py
log-output/manifests/: configmap.yml  deployment.yml  gateway.yml  httproute.yml  ingress.yml  pv.yml  pvclaim.yml  service.yml
pong-app/: Dockerfile  kustomization.yml  main.py
pong-app/manifests/: analysistemplate.yml  deployment.yml  pv.yml  rollout.yml  service.yml  statefulset.yml
todo-app/: Dockerfile  kustomization.yml  main.py  pyproject.toml
todo-app/manifests/: deployment.yml  ingress.yml  persistentvolume.yml  pvclaim.yml  service.yml
todo-app/templates/: index.html
todo-backend/: kustomization.yml  main.py  pyproject.toml
todo-backend/manifests/: configmap.yml  deployment.yml  ingress.yml  job.yml  pv.yml  service.yml  statefulset.yml
todo-broadcaster/: kustomization.yml  main.py  pyproject.toml
todo-broadcaster/manifests/: deployment.yml
wiki-app/: manifest.yml
